переделал со стримов на циклы for